--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -14,7 +14,7 @@
   padding: 0 16px;
   height: 64px;
   background: rgba(24, 24, 27, 0.42);
-  backdrop-filter: blur(5px);
+
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
 
   .logo-description-container {
